# mdbook-inline-mathjax

./: Cargo.toml  README.md
src/: main.rs
